# high-perf-sorting

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Context.md  bpftrace.md  run.sh  setup.sh
bench/: CMakeLists.txt  merge.cpp
bench/arrow/: Cargo.toml  basic_sort.rs  generate_parquet.rs
bench/multi_way_merge/: CMakeLists.txt  merge.cpp  node.h  queue.h
src/: CMakeLists.txt  async_stages.h  compression.h  config.h  io_backend.cpp  io_backend.h  io_task.h  io_uring_utils.h  key_index_pair.h  key_value_pair.h  main.cpp  merge.h  merge_tree.h  partition.h  perf_utils.h  read_values.h  reader.cpp  reader.h  sorted_run.h  sorter.h  writer.h
tools/: generate_records.py  plot_bpftrace_bw.py  plot_disk_bw.py  plot_mem_bw.py  verify_sort.py
